--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.volley:volley:1.2.0'
+    implementation 'io.github.ParkSangGwon:tedpermission:2.3.0'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.android.support:design:33.0.0'
     testImplementation 'junit:junit:4.13.2'
