--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'io.github.ParkSangGwon:tedpermission:2.3.0'
+    implementation 'androidx.fragment:fragment:1.3.0'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.android.support:design:33.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
