--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'io.github.ParkSangGwon:tedpermission:2.3.0'
     implementation 'androidx.fragment:fragment:1.3.0'
