마이페이지 - 로그아웃 오류 수정 - 프로필 사진 설정 - 정보수정 -> 비밀번호 확인

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LogoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VerifyIdentityActivity"
+            android:exported="false">
+        </activity>
+
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
