--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".FindPassActivity"
+            android:exported="false" />
+        <activity
             android:name=".lockerDesActivity"
             android:exported="false" />
         <activity
@@ -66,7 +69,7 @@
             android:exported="false" />
         <activity
             android:name=".VerifyIdentityActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
