--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.android.volley:volley:1.2.0'
+    implementation files('libs/mysql-connector-j-8.1.0.jar')
     implementation 'io.github.ParkSangGwon:tedpermission:2.3.0'
     implementation 'androidx.fragment:fragment:1.3.0'
     implementation 'com.google.android.material:material:1.9.0'
@@ -49,3 +49,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
+
+
